fixed responsive design for mobile version

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -26,11 +26,12 @@
             <input type="radio" name="slider" id="s5">
             <label for="s1" id="slide1">
               <div class="slider-image-wrapper">
-                <img src="assets/img/project/top-panel-carousel/1.png" />
+                <img class="slider-image-background" src="assets/img/project/top-panel-carousel/1-back.png"/>
+                <img class="slider-image" src="assets/img/project/top-panel-carousel/1.png" />
               </div>
               <div class="container d-flex text-break text-dark slider-card-footer my-auto">
                 <div class="p-0 mx-0 text-center position-relative my-auto">
-                  <img src="assets/img/project/top-panel-carousel/avatar1.png" width="48" height="48" class="rounded-circle" />
+                  <div class="footer-avatar">N</div>
                 </div>
                 <div class="px-2 my-auto me-auto">
                   <p class="text-break fw-bold mb-0" [style.font-size]="'12px'">
@@ -50,11 +51,12 @@
             </label>
             <label for="s2" id="slide2">
               <div class="slider-image-wrapper">
-                <img src="assets/img/project/top-panel-carousel/2.png" />
+                <img class="slider-image-background" src="assets/img/project/top-panel-carousel/2-back.png"/>
+                <img class="slider-image" src="assets/img/project/top-panel-carousel/2.png" />
               </div>
               <div class="container d-flex text-break text-dark slider-card-footer my-auto">
                 <div class="p-0 mx-0 text-center position-relative my-auto">
-                  <img src="assets/img/project/top-panel-carousel/avatar1.png" width="48" height="48" class="rounded-circle" />
+                  <div class="footer-avatar">C</div>
                 </div>
                 <div class="px-2 my-auto me-auto">
                   <p class="text-break fw-bold mb-0" [style.font-size]="'12px'">
@@ -74,11 +76,12 @@
             </label>
             <label for="s3" id="slide3">
               <div class="slider-image-wrapper">
-                <img src="assets/img/project/top-panel-carousel/3.png" />
+                <img class="slider-image-background" src="assets/img/project/top-panel-carousel/1-back.png"/>
+                <img class="slider-image" src="assets/img/project/top-panel-carousel/3.png" />
               </div>
               <div class="container d-flex text-break text-dark slider-card-footer my-auto">
                 <div class="p-0 mx-0 text-center position-relative my-auto">
-                  <img src="assets/img/project/top-panel-carousel/avatar1.png" width="48" height="48" class="rounded-circle" />
+                  <div class="footer-avatar">C</div>
                 </div>
                 <div class="px-2 my-auto me-auto">
                   <p class="text-break fw-bold mb-0" [style.font-size]="'12px'">
@@ -98,11 +101,12 @@
             </label>
             <label for="s4" id="slide4">
               <div class="slider-image-wrapper">
-                <img src="assets/img/project/top-panel-carousel/4.png" />
+                <img class="slider-image-background" src="assets/img/project/top-panel-carousel/2-back.png"/>
+                <img class="slider-image" src="assets/img/project/top-panel-carousel/4.png" />
               </div>
               <div class="container d-flex text-break text-dark slider-card-footer my-auto">
                 <div class="p-0 mx-0 text-center position-relative my-auto">
-                  <img src="assets/img/project/top-panel-carousel/avatar1.png" width="48" height="48" class="rounded-circle" />
+                  <div class="footer-avatar">N</div>
                 </div>
                 <div class="px-2 my-auto me-auto">
                   <p class="text-break fw-bold mb-0" [style.font-size]="'12px'">
@@ -122,11 +126,12 @@
             </label>
             <label for="s5" id="slide5">
               <div class="slider-image-wrapper">
-                <img src="assets/img/project/top-panel-carousel/1.png" />
+                <img class="slider-image-background" src="assets/img/project/top-panel-carousel/1-back.png"/>
+                <img class="slider-image" src="assets/img/project/top-panel-carousel/1.png" />
               </div>
               <div class="container d-flex text-break text-dark slider-card-footer my-auto">
                 <div class="p-0 mx-0 text-center position-relative my-auto">
-                  <img src="assets/img/project/top-panel-carousel/avatar1.png" width="48" height="48" class="rounded-circle" />
+                  <div class="footer-avatar">C</div>
                 </div>
                 <div class="px-2 my-auto me-auto">
                   <p class="text-break fw-bold mb-0" [style.font-size]="'12px'">
@@ -298,7 +303,7 @@
           <img src="assets/img/project/play_to_earn/2.png" class="playboard-coin-2" />
           <img src="assets/img/project/play_to_earn/3.png" class="playboard-coin-3" />
 
-          <div class="fw-900 lh-sm" [style.z-index]="10" [style.font-size]="'3.5rem'">
+          <div class="fw-900 lh-sm play-board-title">
             Play More <br> To Earn More <br> Snatcheroos
           </div>
           <div class="mx-auto my-3" [style.width]="'12rem'">
@@ -313,7 +318,7 @@
           <img src="assets/img/project/release_business/1.png" class="release-panel-coin-1" />
           <img src="assets/img/project/release_business/2.png" class="release-panel-coin-2" />
 
-          <div class="fw-900 lh-sm text-dark" [style.font-size]="'3rem'">
+          <div class="fw-900 lh-sm text-dark release-board-title">
             Release your business <br> Rewards on Snatch
           </div>
           <div class="mx-auto my-3" [style.width]="'12rem'">
