--- a/src/app/shared/components/layouts/layout-footer/layout-footer.component.html
+++ b/src/app/shared/components/layouts/layout-footer/layout-footer.component.html
@@ -1,3 +1,3 @@
-<footer class="footer navbar-fixed-bottom d-flex justify-content-center align-items-center">
-    <div class="fs-6">Snath - Your Reward Marketplace Powered by NFT based Smart Contracts</div>
+<footer class="footer px-3 navbar-fixed-bottom d-flex justify-content-center align-items-center">
+    <div class="fs-6 footer-title">Snath - Your Reward Marketplace Powered by NFT based Smart Contracts</div>
 </footer>
