--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -265,7 +265,7 @@
                 <process-card [type]="'finger'" [index]="2" [buttonText]="'play now'"></process-card>
               </div>
               <div drag-scroll-item class="mx-5" [style.width]="'22rem'">
-                <process-card [noImage]="true" [index]="3" [buttonText]="'Manage Rewards'"></process-card>
+                <process-card [noImage]="true" [index]="3" [buttonText]="'Manage \n Rewards'"></process-card>
               </div>
             </div>
           </drag-scroll>
