--- a/src/app/shared/components/layouts/layout-header/layout-header.component.scss
+++ b/src/app/shared/components/layouts/layout-header/layout-header.component.scss
@@ -23,3 +23,9 @@
     font-size: 1.5rem;
   }
 }
+.navbar-light {
+  background-color: white!important;
+  .nav-link {
+    color: black!important;
+  }
+}
