fixed landing page according to the feedback.

--- a/src/app/shared/components/process-card/process-card.component.html
+++ b/src/app/shared/components/process-card/process-card.component.html
@@ -1,7 +1,7 @@
 <div class="card process-card-wrapper text-center rounded-4 border-0">
     <div class="row g-0 py-2 d-flex justify-content-center align-items-center">
         <div class="col-md-2 col-sm-2">
-            <div class="process-number text-dark">{{index}}</div>
+            <div class="process-number text-dark" [ngClass]="{'process-number1': index == 2 || index == 3}">{{index}}</div>
         </div>
         <div class="text-center" [ngClass]="[noImage ? 'col-md-10 col-sm-10' : 'col-md-8 col-sm-8']">
             <div class="card-body text-dark">
