--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -64,30 +64,30 @@
 
 .play-board-title {
     z-index  : 10 !important;
-    font-size: 3.5rem !important;
+    font-size: 4rem !important;
 }
 
 .playboard-coin-1 {
-    position: absolute;
-    left    : -3.5rem;
-    top     : 40%;
-    width   : 150px;
+    position   : absolute;
+    left       : -3.5rem;
+    top        : 40%;
+    width      : 170px;
     // height  : 150px;
 }
 
 .playboard-coin-2 {
-    position: absolute;
-    left    : 4.5rem;
-    top     : 4rem;
-    width   : 140px;
+    position   : absolute;
+    left       : 8rem;
+    top        : 2rem;
+    width      : 150px;
     // height  : 140px;
 }
 
 .playboard-coin-3 {
-    position: absolute;
-    right   : 0rem;
-    top     : 45%;
-    width   : 140px;
+    position   : absolute;
+    right      : 0rem;
+    top        : 45%;
+    width      : 150px;
     // height  : 140px;
 }
 
@@ -98,7 +98,7 @@
     }
 
     .playboard-coin-1 {
-        width : 130px;
+        width    : 130px;
         // height: 130px;
     }
 
@@ -110,15 +110,16 @@
 
 @media screen and (max-width:400px) {
     .play-to-earn {
-        height: 400px!important;
+        height: 400px !important;
     }
+
     .play-board-title {
         z-index  : 10 !important;
         font-size: 1.4rem !important;
     }
 
     .playboard-coin-1 {
-        width : 100px;
+        width    : 100px;
         // height: 100px;
     }
 
@@ -132,25 +133,25 @@
 
 // release panel
 .release-business-panel {
-    height          : 400px;
+    height          : 330px;
     width           : 100%;
     background-color: #f5f5f5;
     overflow-x      : hidden;
 }
 
 .release-panel-coin-1 {
-    position: absolute;
-    left    : -1.5rem;
-    top     : 55%;
-    width   : 180px;
+    position   : absolute;
+    left       : -1.5rem;
+    top        : 45%;
+    width      : 180px;
     // height  : 180px;
 }
 
 .release-panel-coin-2 {
-    position: absolute;
-    right   : -5rem;
-    top     : 10%;
-    width   : 200px;
+    position   : absolute;
+    right      : -5rem;
+    top        : 10%;
+    width      : 250px;
     // height  : 200px;
 }
 
@@ -173,12 +174,12 @@
     }
 
     .release-panel-coin-1 {
-        width : 140px;
+        width    : 140px;
         // height: 140px;
     }
 
     .release-panel-coin-2 {
-        width : 160px;
+        width    : 160px;
         // height: 160px;
     }
 }
@@ -190,12 +191,12 @@
     }
 
     .release-panel-coin-1 {
-        width : 100px;
+        width    : 100px;
         // height: 140px;
     }
 
     .release-panel-coin-2 {
-        width : 120px;
+        width    : 120px;
         // height: 160px;
     }
 }
@@ -212,6 +213,7 @@
     position       : relative;
     perspective    : 1000px;
     transform-style: preserve-3d;
+    pointer-events : none !important;
 }
 
 #slider label {
@@ -225,6 +227,16 @@
     cursor          : pointer;
     transition      : transform 0.4s ease;
     background-color: white;
+}
+
+#slider label .slider-overlay {
+    position        : absolute;
+    width           : 100%;
+    height          : 100%;
+    top             : 0;
+    left            : 0;
+    background-color: transparent;
+    z-index         : 2;
 }
 
 #slider .slider-image-wrapper {
@@ -266,7 +278,9 @@
 #s2:checked~#slide2,
 #s3:checked~#slide3,
 #s4:checked~#slide4,
-#s5:checked~#slide5 {
+#s5:checked~#slide5,
+#s6:checked~#slide6,
+#s7:checked~#slide7 {
     .slider-image-wrapper {
         position: relative;
 
@@ -279,6 +293,16 @@
             transition        : opacity 1s ease-in-out;
             animation         : zoom-in-zoom-out 1s ease 1;
         }
+    }
+
+    .slider-overlay {
+        opacity           : 1;
+        -webkit-transition: opacity 1s ease-in-out;
+        -moz-transition   : opacity 1s ease-in-out;
+        -ms-transition    : opacity 1s ease-in-out;
+        -o-transition     : opacity 1s ease-in-out;
+        transition        : opacity 1s ease-in-out;
+        animation         : zoom-in-zoom-out 1s ease 1;
     }
 }
 
@@ -300,50 +324,157 @@
     }
 }
 
-#s1:checked~#slide4,
-#s2:checked~#slide5,
-#s3:checked~#slide1,
-#s4:checked~#slide2,
-#s5:checked~#slide3 {
+#s1:checked~#slide5,
+#s2:checked~#slide6,
+#s3:checked~#slide7,
+#s4:checked~#slide1,
+#s5:checked~#slide2,
+#s6:checked~#slide3,
+#s7:checked~#slide4 {
     box-shadow: 0 1px 4px 0 rgba(0, 0, 0, .37);
-    transform : translate3d(-40vw, 0, -200px);
+    transform : translate3d(-60vw, 0, -600px);
+
+    .slider-overlay {
+        background-color: rgba(0, 0, 0, .37);
+    }
 }
 
-#s1:checked~#slide5,
+#s1:checked~#slide6,
+#s2:checked~#slide7,
+#s3:checked~#slide1,
+#s4:checked~#slide2,
+#s5:checked~#slide3,
+#s6:checked~#slide4,
+#s7:checked~#slide5 {
+    box-shadow: 0 1px 4px 0 rgba(0, 0, 0, .37);
+    transform : translate3d(-40vw, 0, -400px);
+
+    .slider-overlay {
+        background-color: rgba(0, 0, 0, .37);
+    }
+}
+
+#s1:checked~#slide7,
 #s2:checked~#slide1,
 #s3:checked~#slide2,
 #s4:checked~#slide3,
-#s5:checked~#slide4 {
-    box-shadow: 0 6px 10px 0 rgba(0, 0, 0, .3), 0 2px 2px 0 rgba(0, 0, 0, .2);
-    transform : translate3d(-20vw, 0, -100px);
+#s5:checked~#slide4,
+#s6:checked~#slide5,
+#s7:checked~#slide6 {
+    box-shadow: 0 1px 4px 0 rgba(0, 0, 0, .37);
+    transform : translate3d(-20vw, 0, -200px);
+
+    .slider-overlay {
+        background-color: rgba(0, 0, 0, .37);
+    }
 }
 
 #s1:checked~#slide1,
 #s2:checked~#slide2,
 #s3:checked~#slide3,
 #s4:checked~#slide4,
-#s5:checked~#slide5 {
-    box-shadow: 0 13px 25px 0 rgba(0, 0, 0, .3), 0 11px 7px 0 rgba(0, 0, 0, .19);
-    transform : translate3d(0, 0, 0);
+#s5:checked~#slide5,
+#s6:checked~#slide6,
+#s7:checked~#slide7 {
+    box-shadow: 0 1px 4px 0 rgba(0, 0, 0, .37);
+    transform : translate3d(0, 0, -0);
+
+    .slider-overlay {
+        background-color: transparent;
+    }
 }
 
 #s1:checked~#slide2,
 #s2:checked~#slide3,
 #s3:checked~#slide4,
 #s4:checked~#slide5,
-#s5:checked~#slide1 {
-    box-shadow: 0 6px 10px 0 rgba(0, 0, 0, .3), 0 2px 2px 0 rgba(0, 0, 0, .2);
-    transform : translate3d(20vw, 0, -100px);
+#s5:checked~#slide6,
+#s6:checked~#slide7,
+#s7:checked~#slide1 {
+    box-shadow: 0 1px 4px 0 rgba(0, 0, 0, .37);
+    transform : translate3d(20vw, 0, -200px);
+
+    .slider-overlay {
+        background-color: rgba(0, 0, 0, .37);
+    }
 }
 
 #s1:checked~#slide3,
 #s2:checked~#slide4,
 #s3:checked~#slide5,
-#s4:checked~#slide1,
-#s5:checked~#slide2 {
+#s4:checked~#slide6,
+#s5:checked~#slide7,
+#s6:checked~#slide1,
+#s7:checked~#slide2 {
     box-shadow: 0 1px 4px 0 rgba(0, 0, 0, .37);
-    transform : translate3d(40vw, 0, -200px);
+    transform : translate3d(40vw, 0, -400px);
+
+    .slider-overlay {
+        background-color: rgba(0, 0, 0, .37);
+    }
 }
+
+#s1:checked~#slide4,
+#s2:checked~#slide5,
+#s3:checked~#slide6,
+#s4:checked~#slide7,
+#s5:checked~#slide1,
+#s6:checked~#slide2,
+#s7:checked~#slide3 {
+    box-shadow: 0 1px 4px 0 rgba(0, 0, 0, .37);
+    transform : translate3d(60vw, 0, -600px);
+
+    .slider-overlay {
+        background-color: rgba(0, 0, 0, .37);
+    }
+}
+
+// #s1:checked~#slide7,
+// #s2:checked~#slide6,
+// #s3:checked~#slide5,
+// #s4:checked~#slide1,
+// #s5:checked~#slide2,
+// #s6:checked~#slide3,
+// #s7:checked~#slide4 {
+//     box-shadow: 0 1px 4px 0 rgba(0, 0, 0, .37);
+//     transform : translate3d(-40vw, 0, -500px);
+// }
+
+// #s1:checked~#slide5,
+// #s2:checked~#slide1,
+// #s3:checked~#slide2,
+// #s4:checked~#slide3,
+// #s5:checked~#slide4 {
+//     box-shadow: 0 6px 10px 0 rgba(0, 0, 0, .3), 0 2px 2px 0 rgba(0, 0, 0, .2);
+//     transform : translate3d(-20vw, 0, -300px);
+// }
+
+// #s1:checked~#slide1,
+// #s2:checked~#slide2,
+// #s3:checked~#slide3,
+// #s4:checked~#slide4,
+// #s5:checked~#slide5 {
+//     box-shadow: 0 13px 25px 0 rgba(0, 0, 0, .3), 0 11px 7px 0 rgba(0, 0, 0, .19);
+//     transform : translate3d(0, 0, 0);
+// }
+
+// #s1:checked~#slide2,
+// #s2:checked~#slide3,
+// #s3:checked~#slide4,
+// #s4:checked~#slide5,
+// #s5:checked~#slide1 {
+//     box-shadow: 0 6px 10px 0 rgba(0, 0, 0, .3), 0 2px 2px 0 rgba(0, 0, 0, .2);
+//     transform : translate3d(20vw, 0, -300px);
+// }
+
+// #s1:checked~#slide3,
+// #s2:checked~#slide4,
+// #s3:checked~#slide5,
+// #s4:checked~#slide1,
+// #s5:checked~#slide2 {
+//     box-shadow: 0 1px 4px 0 rgba(0, 0, 0, .37);
+//     transform : translate3d(40vw, 0, -500px);
+// }
 
 .slider-card-footer {
     height: 75px;
