update process card

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -326,14 +326,14 @@
           <div class="scroll-wrapper pb-5">
             <drag-scroll #nav [scroll-x-wheel-enabled]="true">
               <div class="container-fluid mb-5">
-                <div drag-scroll-item class="mx-3" [style.width]="'22rem'">
+                <div drag-scroll-item class="me-5 ms-3" [style.width]="'22rem'">
                   <process-card [type]="'lock'" [index]="1" [buttonText]="'sign up'"></process-card>
                 </div>
-                <div drag-scroll-item class="mx-3" [style.width]="'22rem'">
+                <div drag-scroll-item class="mx-5" [style.width]="'22rem'">
                   <process-card [type]="'finger'" [index]="2" [buttonText]="'play now'"></process-card>
                 </div>
-                <div drag-scroll-item class="mx-3" [style.width]="'22rem'">
-                  <process-card [noImage]="true" [index]="3" [buttonText]="'Manage \n Rewards'"></process-card>
+                <div drag-scroll-item class="mx-5" [style.width]="'22rem'">
+                  <process-card [index]="3" [buttonText]="'Manage \n Rewards'"></process-card>
                 </div>
               </div>
             </drag-scroll>
