--- a/src/app/shared/components/process-card/process-card.component.html
+++ b/src/app/shared/components/process-card/process-card.component.html
@@ -5,9 +5,9 @@
         </div>
         <div class="text-center" [ngClass]="[noImage ? 'col-md-10 col-sm-10' : 'col-md-8 col-sm-8']">
             <div class="card-body text-dark">
-                <h5 class="card-title fw-900" *ngIf="!noImage && type=='lock'">Join Us <br> To Start</h5>
-                <h5 class="card-title fw-900" *ngIf="!noImage && type=='finger'">Select The <br> Company</h5>
-                <h5 class="card-title fw-900" *ngIf="noImage">Go To Profile<br> & See Rewards</h5>
+                <h5 class="card-title fw-900" *ngIf="index == 1">Join Us <br> To Start</h5>
+                <h5 class="card-title fw-900" *ngIf="index == 2">Select The <br> Company</h5>
+                <h5 class="card-title fw-900" *ngIf="index == 3">Go To Profile<br> & See Rewards</h5>
                 <div class="mx-auto" [style.width]="'9rem'">
                     <image-button [text]="buttonText" [size]="'sm'"></image-button>
                 </div>
