--- a/src/app/pages/game/spin/spin.component.html
+++ b/src/app/pages/game/spin/spin.component.html
@@ -7,7 +7,6 @@
         [size]="'lg'"
       ></image-button>
     </div>
-
     <div class="mt-3">You will be charged 100$</div>
     <div class="spin-wrapper mt-5">
       <div class="spin-mark">
@@ -17,11 +16,17 @@
         (click)="getSegment($event)"
         class="spin-panel"
         id="canvas"
-        [width]="spin_length * 2"
-        [height]="spin_length"
+        [width]="1240"
+        [height]="620"
       >
         <p>Sorry, your browser doesn't support canvas. Please try another.</p>
       </canvas>
+      <div class="spin-result">
+        <img src=""/>
+      </div>
+      <div class="spin-center">
+        <img src="/assets/img/project/game/spin/spin-center.png"/>
+      </div>
     </div>
   </div>
 </app-page-layout>
