--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -225,7 +225,7 @@
                 <div class="card h-100 bg-dark text-white rounded-4 shadow">
                   <img src="/assets/img/project/card-background.png" class="card-img rounded-4" alt="...">
                   <div class="card-img-overlay d-flex flex-column p-0 m-0">
-                    <h4 class="card-title fw-900 py-4">Spin The <br> Wheel</h4>
+                    <h4 class="card-title fs-3 fw-900 py-4">Spin The <br> Wheel</h4>
                     <div
                       class="card-body-content flex-fill position-relative d-flex justify-content-center align-items-end">
                       <img src="assets/img/project/spin-wheel.png" class="three-game-image rounded-top rounded-4" />
@@ -240,7 +240,7 @@
                 <div class="card h-100 bg-dark text-white rounded-4 shadow">
                   <img src="/assets/img/project/card-background.png" class="card-img rounded-4" alt="...">
                   <div class="card-img-overlay d-flex flex-column p-0 m-0">
-                    <h4 class="card-title fw-900 py-4">Scratch <br>& Snatch</h4>
+                    <h4 class="card-title fs-3 fw-900 py-4">Scratch <br>& Snatch</h4>
                     <div
                       class="card-body-content flex-fill position-relative d-flex justify-content-center align-items-end">
                       <img src="assets/img/project/snatch.png" class="three-game-image rounded-top rounded-4" />
@@ -255,7 +255,7 @@
                 <div class="card h-100 bg-dark text-white rounded-4 shadow">
                   <img src="/assets/img/project/card-background.png" class="card-img rounded-4" alt="...">
                   <div class="card-img-overlay d-flex flex-column p-0 m-0">
-                    <h4 class="card-title fw-900 py-4">Play A <br> Card</h4>
+                    <h4 class="card-title fs-3 fw-900 py-4">Play A <br> Card</h4>
                     <div
                       class="card-body-content flex-fill position-relative d-flex justify-content-center align-items-end">
                       <img src="assets/img/project/pick-card.png" class="three-game-image rounded-top rounded-4" />
