--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -219,56 +219,57 @@
           <h1 class=" text-dark fw-800 py-4 ">
             Three Ways To Win
           </h1>
-          <div class="d-grid col-7 mx-auto pb-4">
-            <div class="row row-cols-1 row-cols-md-3 g-5">
-              <div class="col">
-                <div class="card h-100 bg-dark text-white rounded-4 shadow">
-                  <img src="/assets/img/project/card-background.png" class="card-img rounded-4" alt="...">
-                  <div class="card-img-overlay d-flex flex-column p-0 m-0">
-                    <h4 class="card-title fs-3 fw-900 py-4">Spin The <br> Wheel</h4>
-                    <div
-                      class="card-body-content flex-fill position-relative d-flex justify-content-center align-items-end">
-                      <img src="assets/img/project/spin-wheel.png" class="three-game-image rounded-top rounded-4" />
-                      <div class="mb-3" [style.width]="'9rem'">
-                        <image-button [text]="'play now'"></image-button>
+          <div class="scroll-wrapper mx-3">
+            <drag-scroll #nav [scroll-x-wheel-enabled]="true">
+              <div class="container-fluid mb-5">
+                <div drag-scroll-item class="me-5 ms-3" [style.width]="'21rem'">
+                  <div class="card h-100 bg-dark text-white rounded-4 shadow">
+                    <img src="/assets/img/project/card-background.png" class="card-img rounded-4" alt="...">
+                    <div class="card-img-overlay d-flex flex-column p-0 m-0">
+                      <h4 class="card-title fs-3 fw-900 py-4">Spin The <br> Wheel</h4>
+                      <div
+                        class="card-body-content flex-fill position-relative d-flex justify-content-center align-items-end">
+                        <img src="assets/img/project/spin-wheel.png" class="three-game-image rounded-top rounded-4" />
+                        <div class="mb-3" [style.width]="'9rem'">
+                          <image-button [text]="'play now'"></image-button>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <div drag-scroll-item class="me-5 ms-3" [style.width]="'21rem'">
+                  <div class="card h-100 bg-dark text-white rounded-4 shadow">
+                    <img src="/assets/img/project/card-background.png" class="card-img rounded-4" alt="...">
+                    <div class="card-img-overlay d-flex flex-column p-0 m-0">
+                      <h4 class="card-title fs-3 fw-900 py-4">Scratch <br>& Snatch</h4>
+                      <div
+                        class="card-body-content flex-fill position-relative d-flex justify-content-center align-items-end">
+                        <img src="assets/img/project/snatch.png" class="three-game-image rounded-top rounded-4" />
+                        <div class="mb-3" [style.width]="'9rem'">
+                          <image-button [text]="'play now'"></image-button>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <div drag-scroll-item class="me-5 ms-3" [style.width]="'21rem'">
+                  <div class="card h-100 bg-dark text-white rounded-4 shadow">
+                    <img src="/assets/img/project/card-background.png" class="card-img rounded-4" alt="...">
+                    <div class="card-img-overlay d-flex flex-column p-0 m-0">
+                      <h4 class="card-title fs-3 fw-900 py-4">Play A <br> Card</h4>
+                      <div
+                        class="card-body-content flex-fill position-relative d-flex justify-content-center align-items-end">
+                        <img src="assets/img/project/pick-card.png" class="three-game-image rounded-top rounded-4" />
+                        <div class="mb-3" [style.width]="'9rem'">
+                          <image-button [text]="'play now'"></image-button>
+                        </div>
                       </div>
                     </div>
                   </div>
                 </div>
               </div>
-              <div class="col">
-                <div class="card h-100 bg-dark text-white rounded-4 shadow">
-                  <img src="/assets/img/project/card-background.png" class="card-img rounded-4" alt="...">
-                  <div class="card-img-overlay d-flex flex-column p-0 m-0">
-                    <h4 class="card-title fs-3 fw-900 py-4">Scratch <br>& Snatch</h4>
-                    <div
-                      class="card-body-content flex-fill position-relative d-flex justify-content-center align-items-end">
-                      <img src="assets/img/project/snatch.png" class="three-game-image rounded-top rounded-4" />
-                      <div class="mb-3" [style.width]="'9rem'">
-                        <image-button [text]="'play now'"></image-button>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-              </div>
-              <div class="col">
-                <div class="card h-100 bg-dark text-white rounded-4 shadow">
-                  <img src="/assets/img/project/card-background.png" class="card-img rounded-4" alt="...">
-                  <div class="card-img-overlay d-flex flex-column p-0 m-0">
-                    <h4 class="card-title fs-3 fw-900 py-4">Play A <br> Card</h4>
-                    <div
-                      class="card-body-content flex-fill position-relative d-flex justify-content-center align-items-end">
-                      <img src="assets/img/project/pick-card.png" class="three-game-image rounded-top rounded-4" />
-                      <div class="mb-3" [style.width]="'9rem'">
-                        <image-button [text]="'play now'"></image-button>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
+            </drag-scroll>
           </div>
-
         </div>
 
         <!-- New Reward Collection Panel -->
