--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -29,8 +29,8 @@
     bottom   : 0;
     transform: translate(-50%, 0%);
     width    : 100%;
+    // height   : 100%;
     max-width: 100%;
-    height: 100%;
 }
 
 .new-reward-collection {
